# aruco_marker_tracking

./: .clang  .gitignore  CMakeLists.txt
include/: AMarker.hpp  ArucoTracker.hpp  Camera.hpp  CubeMarker.hpp  Tracker.hpp  WireframeMarker.hpp
include/data/: ADataBackend.hpp  CSVBackend.hpp  DataAccess.hpp
include/data/parsers/: JSONParser.hpp
include/data/parsers/json/: JSONObject.hpp  JSONValue.hpp  JSONValueType.hpp
res/camera_calibrations/: Microsoft_HD3000.xml  ThinkPad_L460_Integrated.xml
src/: AMarker.cpp  ArucoTracker.cpp  CubeMarker.cpp  Main.cpp  PyramidMarker.cpp  WireframeMarker.cpp
src/data/: CSVBackend.cpp
src/data/parser/: JSONParser.cpp
