CMAKE_MINIMUM_REQUIRED ( VERSION 3.5 )
PROJECT ( aruco_marker_tracking )

SET ( CMAKE_EXPORT_COMPILE_COMMANDS ON )

FIND_PACKAGE ( OpenCV REQUIRED )

FILE ( GLOB_RECURSE SRC "src/*.cpp" )
FILE ( GLOB_RECURSE HDR "include/*.h")

ADD_EXECUTABLE ( amt ${SRC} ${HDR} )
TARGET_INCLUDE_DIRECTORIES ( amt PUBLIC ${OpenCV_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES ( amt ${OpenCV_LIBS} )
